Removed junk, added template "study guide" pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<!DOCTYPE=HTML>
-<html lang = "en"> 
-	<head> 
+<!DOCTYPE html>
+<html lang="en">
+	
+	<head>
 		<meta charset="UTF-8">
-		<title>Links and Images</title>
+		<title>Formatting 1</title>
 	</head>
+	
 	<body>
-		<h1>Homepage</h1>
-		<a href="https://www.google.com"> <strong>Link Here</strong> </a>
-		<a href = "./pages/about.html">About</a>
-</html>
+		<h1>
+			<p>Study Materials</p>
+			<a href="pages/Calculus.html">Calculus</a>
+			<a href="pages/Anatomy.html">Anatomy</a>
+			<a href="pages/Molecular_Biology.html">Molecular Biology</a>
+			<a href="pages/Genetics.html">Genetics</a>
+		</h1>
+	</body>
 
+	
+</html>
