--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Formatting</title>
   </head>
-
+    <a href="../index.html">Homepage</a>
   <body>
     <h1>About Page</h1>
+    <p>The purpose of this website is to provide a <strong>COMPREHENSIVE, ACCESSIBLE, and EASY-TO-USE </strong> resource, which, by supplememnting your existing notes, aid students in studing for your 1st-semester exams </p>
   </body>
 </html>
